# pidgin

./: Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  ltmain.sh  package_revision.h  pidgin.spec
.github/workflows/: build.yml
libpurple/protocols/: Makefile.in
libpurple/protocols/jabber/: Makefile.in
libpurple/protocols/oscar/: Makefile.am  Makefile.in  README  admin.c  aim.h  auth.c  bos.c  bstream.c  conn.c  faimconfig.h  oscar.c  service.c  ssi.c  util.c
